# Stock-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  memory.md  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  __main__.py  cli.py  compaction.py  config.py  db.py  llm.py  logging_setup.py  loop.py  memory.py  prompt.py  session.py
agent/tools/: __init__.py  backtest.py  base.py  charts.py  db_meta.py  macro.py  market.py  memory.py  news.py  sec.py  sql.py
evals/: README.md  __init__.py  __main__.py  cases.py  runner.py
tests/: conftest.py  test_cli.py  test_compaction.py  test_compaction_live.py  test_config.py  test_llm_context_probe.py  test_loop_helpers.py  test_loop_parallel.py  test_loop_stream.py  test_memory_store.py  test_prompt.py  test_session.py  test_spinner.py  test_tool_registry.py  test_tools_charts.py  test_tools_impl.py  test_tools_macro.py  test_tools_memory.py  test_tools_news.py  test_tools_sec.py  test_tools_sql_guard.py
